Updated GA files

--- a/.github/workflows/build-linux-artifact.yml
+++ b/.github/workflows/build-linux-artifact.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       # Checkout Godot
       - name: Checkout Godot
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: "godotengine/godot"
           path: "godot"
@@ -41,7 +41,7 @@ jobs:
 
       # Checkout current source of GodotSteam Server
       - name: Checkout GodotSteam Server
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "godotsteam_server"
       - name: Copy GodotSteam Server Module
@@ -50,7 +50,7 @@ jobs:
 
       # Checkout Steamworks SDK
       - name: Checkout Steamworks SDK
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "steamworks"
           repository: ${{ secrets.steamworks_sdk_repo }}
@@ -69,14 +69,16 @@ jobs:
           PATH=/opt/x86_64-godot-linux-gnu_sdk-buildroot/bin:$PATH scons ${{ inputs.build_params }}
           mv bin/${{ inputs.binary_name }} bin/${{ inputs.export_name }}
       - name: Upload Linux Build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
           path: godot/bin/${{ inputs.export_name }}
+          overwrite: true
           retention-days: 1
       - name: Upload Linux Steam File
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: linux-libsteam-api-so
           path: godot/modules/godotsteam_server/sdk/redistributable_bin/linux64/libsteam_api.so
+          overwrite: true
           retention-days: 1
