--- a/.github/workflows/build-windows-artifact.yml
+++ b/.github/workflows/build-windows-artifact.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       # Checkout Godot
       - name: Checkout Godot
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: "godotengine/godot"
           path: "godot"
@@ -41,7 +41,7 @@ jobs:
 
       # Checkout current source of GodotSteam Server
       - name: Checkout GodotSteam Server
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "godotsteam_server"
       - name: Copy GodotSteam Server Module
@@ -53,7 +53,7 @@ jobs:
 
       # Checkout Steamworks SDK
       - name: Checkout Steamworks SDK
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "steamworks"
           repository: ${{ secrets.steamworks_sdk_repo }}
@@ -78,15 +78,17 @@ jobs:
           scons ${{ inputs.build_params }}
           cd bin && ren ${{ inputs.binary_name }} ${{ inputs.export_name }}
       - name: Upload Windows Build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
           path: godot/bin/${{ inputs.export_name }}
+          overwrite: true
           retention-days: 1
       - name: Upload Windows 64 bit Steam File
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: win_steam_api_64
           path: |
             godot/modules/godotsteam_server/sdk/redistributable_bin/win64/steam_api64.dll
+          overwrite: true
           retention-days: 1
