--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -45,86 +45,85 @@ jobs:
           gv=${gv%-*}
           echo "godot_version=${gv}" >> $GITHUB_OUTPUT
 
-################# Linux 64 Builds #################
-#   Commented out until we fix up custom runners
-#  build-linux-editor:
-#    needs: [env-setup]
-#    uses: ./.github/workflows/build-linux-artifact.yml
-#    with:
-#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-#      godot_tag: ${{ inputs.godot_tag }}
-#      binary_name: "godot.linuxbsd.editor.x86_64"
-#      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-editor.x86_64"
-#      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=editor bits=64 warnings=extra"
-#      artifact_name: "linux-editor"
-#    secrets:
-#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-#
-#  build-linux-release-template:
-#    needs: [env-setup]
-#    uses: ./.github/workflows/build-linux-artifact.yml
-#    with:
-#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-#      godot_tag: ${{ inputs.godot_tag }}
-#      binary_name: "godot.linuxbsd.template_release.x86_64"
-#      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-template.x86_64"
-#      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_release bits=64 warnings=extra"
-#      artifact_name: "linux-release-template"
-#    secrets:
-#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-#
-#  build-linux-debug-template:
-#    needs: [env-setup]
-#    uses: ./.github/workflows/build-linux-artifact.yml
-#    with:
-#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-#      godot_tag: ${{ inputs.godot_tag }}
-#      binary_name: "godot.linuxbsd.template_debug.x86_64"
-#      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-debug-template.x86_64"
-#      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_debug bits=64 warnings=extra"
-#      artifact_name: "linux-debug-template"
-#    secrets:
-#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-#
-#  create-linux-bundle:
-#    needs: [env-setup, build-linux-editor, build-linux-release-template, build-linux-debug-template]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Download Linux Editor
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: linux-editor
-#          path: files
-#      - name: Download Linux Release Template
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: linux-release-template
-#          path: files
-#      - name: Download Linux Debug Template
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: linux-debug-template
-#          path: files
-#      - name: Download Linux Steam API
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: linux-libsteam-api-so
-#          path: files
-#      - name: Create Linux Bundle
-#        run: |
-#          echo "480" >> files/steam_appid.txt
-#          zip -j linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
-#      - name: Upload Win64 bundle artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
-#          path: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
-#          if-no-files-found: error
-#          overwrite: true
-#          retention-days: 1
+################ Linux 64 Builds #################
+  build-linux-editor:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-linux-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot.linuxbsd.editor.x86_64"
+      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-editor.x86_64"
+      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=editor bits=64 warnings=extra"
+      artifact_name: "linux-editor"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+
+  build-linux-release-template:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-linux-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot.linuxbsd.template_release.x86_64"
+      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-template.x86_64"
+      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_release bits=64 warnings=extra"
+      artifact_name: "linux-release-template"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+
+  build-linux-debug-template:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-linux-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot.linuxbsd.template_debug.x86_64"
+      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-debug-template.x86_64"
+      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_debug bits=64 warnings=extra"
+      artifact_name: "linux-debug-template"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+
+  create-linux-bundle:
+    needs: [env-setup, build-linux-editor, build-linux-release-template, build-linux-debug-template]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Linux Editor
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-editor
+          path: files
+      - name: Download Linux Release Template
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-release-template
+          path: files
+      - name: Download Linux Debug Template
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-debug-template
+          path: files
+      - name: Download Linux Steam API
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-libsteam-api-so
+          path: files
+      - name: Create Linux Bundle
+        run: |
+          echo "480" >> files/steam_appid.txt
+          zip -j linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
+      - name: Upload Win64 bundle artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          path: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          if-no-files-found: error
+          overwrite: true
+          retention-days: 1
 
 ################# Win64 Builds #################
   
@@ -214,7 +213,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.editor.x86_64"
+      export_name: "godot.macos.editor.x86_64"
       build_params: "-j6 platform=macos arch=x86_64 production=yes tools=yes target=editor --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-editor-x86_64"
     secrets:
@@ -226,7 +225,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.template_release.x86_64"
+      export_name: "godot.macos.template_release.x86_64"
       build_params: "-j6 platform=macos arch=x86_64 production=yes tools=no target=template_release --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-release-template-x86_64"
     secrets:
@@ -238,7 +237,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.template_debug.x86_64"
+      export_name: "godot.macos.template_debug.x86_64"
       build_params: "-j6 platform=macos arch=x86_64 production=yes tools=no target=template_debug --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-debug-template-x86_64"
     secrets:
@@ -250,7 +249,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.editor.arm64"
+      export_name: "godot.macos.editor.arm64"
       build_params: "-j6 platform=macos arch=arm64 production=yes tools=yes target=editor --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-editor-arm64"
     secrets:
@@ -262,7 +261,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.template_release.arm64"
+      export_name: "godot.macos.template_release.arm64"
       build_params: "-j6 platform=macos arch=arm64 production=yes tools=no target=template_release --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-release-template-arm64"
     secrets:
@@ -274,7 +273,7 @@ jobs:
     with:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
-      export_name: "godot.server.macos.template_debug.arm64"
+      export_name: "godot.macos.template_debug.arm64"
       build_params: "-j6 platform=macos arch=arm64 production=yes tools=no target=template_debug --jobs=$(sysctl -n hw.logicalcpu) warnings=extra"
       artifact_name: "macos-debug-template-arm64"
     secrets:
