--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -54,7 +54,7 @@ jobs:
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: "godot.linuxbsd.editor.x86_64"
       export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-editor.x86_64"
-      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=editor bits=64 warnings=extra"
+      build_params: "-j4 platform=linuxbsd production=yes target=editor bits=64 warnings=extra"
       artifact_name: "linux-editor"
     secrets:
       steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
@@ -68,7 +68,7 @@ jobs:
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: "godot.linuxbsd.template_release.x86_64"
       export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-template.x86_64"
-      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_release bits=64 warnings=extra"
+      build_params: "-j4 platform=linuxbsd production=yes target=template_release bits=64 warnings=extra"
       artifact_name: "linux-release-template"
     secrets:
       steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
@@ -82,7 +82,7 @@ jobs:
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: "godot.linuxbsd.template_debug.x86_64"
       export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-debug-template.x86_64"
-      build_params: "-j4 platform=linuxbsd production=yes tools=yes target=template_debug bits=64 warnings=extra"
+      build_params: "-j4 platform=linuxbsd production=yes target=template_debug bits=64 warnings=extra"
       artifact_name: "linux-debug-template"
     secrets:
       steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
