--- a/.github/workflows/build-server-artifact.yml
+++ b/.github/workflows/build-server-artifact.yml
@@ -7,118 +7,214 @@ on:
       godot_tag:
         required: true
         type: string
-      binary_name:
-        required: true
-        type: string
-      build_params:
-        required: true
-        type: string
-      artifact_name:
-        required: true
-        type: string
-      export_name:
-        required: true
-        type: string
     secrets:
       steamworks_sdk_repo:
         required: true
       steamworks_sdk_repo_token:
         required: true
 
-env:
- base_branch: godot3
 
 jobs:
-  build-linux:
-    runs-on: self-hosted
-    
+  build-server:
+    runs-on: "ubuntu-latest"
+
+    name: Server ${{ matrix.name }}
+
+    env:
+      SCONSFLAGS:
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: Editor & Templates
+            cache-name: server
+            build-mono: false
+
+          - name: Editor & Templates w/ Mono
+            cache-name: server-mono
+            build-mono: true
+
     steps:
-      # Checkout Godot
-      - name: Checkout Godot
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      # Download Godot to start
+      - name: Download Godot
+        uses: ./.github/actions/godot-download
+          with:
+            version: ${{ inputs.godot_tag }}
+
+      # Download GodotSteam Server
+      - name: Download GodotSteam Server
+        uses: ./.github/actions/godotsteam-download
+
+      # Download Steamworks SDK
+      - name: Download Steamworks SDK
+        uses: ./.github/actions/steamworks-download
+          with:
+            path: "steamworks"
+            repository: ${{ secrets.steamworks_sdk_repo }}
+            token: ${{ secrets.steamworks_sdk_repo_token }}
+            ref: ${{ inputs.steamworks_sdk_tag }}
+
+      # Setting up the Linux toolchain for older versions
+      - name: Setup Linux Toolchain (x86_64)
+        uses: ./.github/actions/godot-linux-toolchain
         with:
-          repository: "godotengine/godot"
-          path: "godot"
-          ref: ${{ inputs.godot_tag }}
+          toolchain-name: "x86_64-godot-linux-gnu_sdk-buildroot"
 
-      # Checkout current source of GodotSteam Server
-      - name: Checkout GodotSteam Server
-        uses: actions/checkout@v4
+      - name: Setup Linux Toolchain (i686)
+        uses: ./.github/actions/godot-linux-toolchain
         with:
-          path: "godotsteam_server"
-      - name: Copy GodotSteam Server Module
-        run: |
-          cp -r godotsteam_server godot/modules/godotsteam_server
+          toolchain-name: "i686-godot-linux-gnu_sdk-buildroot"
 
-      # Checkout Steamworks SDK
-      - name: Checkout Steamworks SDK
-        uses: actions/checkout@v4
+      # Get that cache set up
+      - name: Setup Godot build cache
+        uses: ./.github/actions/godot-cache
         with:
-          path: "steamworks"
-          repository: ${{ secrets.steamworks_sdk_repo }}
-          token: ${{ secrets.steamworks_sdk_repo_token }}
-          ref: ${{ inputs.steamworks_sdk_tag }}
-      - name: Copy Steamworks
-        run: |
-          mkdir godot/modules/godotsteam_server/sdk/public
-          cp -r steamworks/public godot/modules/godotsteam_server/sdk
-          cp -r steamworks/redistributable_bin godot/modules/godotsteam_server/sdk
+          cache-name: ${{ matrix.cache-name }}
+        continue-on-error: true
 
-      # Install buildroot and dev tools
-      - name: Install buildroot x86_64
-        shell: sh
-        run: |
-          sudo apt-get update
-          sudo apt-get install yasm
-          cd /opt
-          curl -LO https://downloads.tuxfamily.org/godotengine/toolchains/linux/2021-02-11/x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
-          tar xf x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
-          rm -f x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
-          mv x86_64-godot-linux-gnu_sdk-buildroot buildroot
-          cd buildroot
-          ./relocate-sdk.sh
+      # Setup Python and Scons
+      - name: Setup Python and Scons
+        uses: ./.github/actions/godot-deps
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-
-      - name: Set up SCons
+      # Setup Linux dependencies (look how that lines up)
+      - name: Linux dependencies
         shell: bash
         run: |
-          python -c "import sys; print(sys.version)"
-          python -m pip install scons
-          scons --version
-      
-      - name: Load .scons_cache directory
-        id: godot-extension-cache
-        uses: actions/cache@v4
-        with:
-          path: ${{github.workspace}}/.scons_cache/
-          key: ${{github.job}}-${{env.base_branch}}-${{github.ref}}-${{github.sha}}
-          restore-keys: |
-            ${{github.job}}-${{env.base_branch}}-${{github.ref}}-${{github.sha}}
-            ${{github.job}}-${{env.base_branch}}-${{github.ref}}
-            ${{github.job}}-${{env.base_branch}}-${{env.base_branch}}
+          sudo apt-get install xvfb libc6-dev
 
-      # Build the module and make it available
-      - name: Build Linux Editor
-        working-directory: "godot"
-        env:
-          SCONS_CACHE: ${{github.workspace}}/.scons_cache/
-          SCONS_CACHE_LIMIT: 7168
+     # Setup Mono
+      - name: Setup Mono (x86_64)
+        if: ${{ matrix.build-mono }}
+        uses: ./.github/actions/godot-mono
+        with:
+          mono-build-repo: ${{ env.GODOT_MONO_LINUX_BUILD_REPO }}
+          mono-build-tag: ${{ env.GODOT_MONO_LINUX_BUILD_TAG }}
+          mono-release: "linux-x86_64"
+          mono-bcl: "bcl-desktop"
+
+      - name: Setup Mono (x86)
+        if: ${{ matrix.build-mono }}
+        uses: ./.github/actions/godot-mono
+        with:
+          mono-build-repo: ${{ env.GODOT_MONO_LINUX_BUILD_REPO }}
+          mono-build-tag: ${{ env.GODOT_MONO_LINUX_BUILD_TAG }}
+          mono-release: "linux-x86"
+
+      - name: Mono precompilation
+        if: ${{ matrix.build-mono }}
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/x86_64-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ matrix.sconsflags }} module_mono_enabled=yes mono_glue=no mono_bcl=$HOME/mono-bcls/desktop-bcl/net_4_x mono_prefix=$HOME/mono-installs/desktop-linux-x86_64-release
+          platform: linuxbsd
+          tools: true
+
+      # Generate Mono glue
+      - name: Generate Mono glue code
+        if: ${{ matrix.build-mono }}
         run: |
-          PATH=/opt/x86_64-godot-linux-gnu_sdk-buildroot/bin:$PATH scons ${{ inputs.build_params }}
-          mv bin/${{ inputs.binary_name }} bin/${{ inputs.export_name }}
-      - name: Upload Linux Build
-        uses: actions/upload-artifact@v4
+          DRI_PRIME=0 xvfb-run "./bin/godot.x11.tools.64.mono" --generate-mono-glue modules/mono/glue || true
+
+      - name: Set Mono scons flags
+        if: ${{ matrix.build-mono }}
+        run: |
+          echo "MONO_SCONSFLAGS=module_mono_enabled=yes mono_glue=yes copy_mono_root=yes mono_bcl=$HOME/mono-bcls/desktop-bcl/net_4_x" >> $GITHUB_ENV
+
+      - name: Clear bin
+        run: |
+          rm -rf bin
+
+      # Compiling editors
+      - name: Editor compilation (bits=64)
+        uses: ./.github/actions/godot-build
         with:
-          name: ${{ inputs.artifact_name }}
-          path: godot/bin/${{ inputs.export_name }}
-          overwrite: true
-          retention-days: 1
-      - name: Upload Linux Steam File
-        uses: actions/upload-artifact@v4
+          buildroot: "${{ github.workspace }}/x86_64-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=64 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86_64-release' || '' }}
+          platform: server
+          target: release_debug
+          tools: true
+
+      - name: Upload Editor (bits=64)
+        uses: ./.github/actions/upload-artifact
         with:
-          name: linux-libsteam-api-so
-          path: godot/modules/godotsteam_server/sdk/redistributable_bin/linux64/libsteam_api.so
-          overwrite: true
-          retention-days: 1
+          name: ${{ matrix.cache-name }}-editor-64
+
+      - name: Clear bin
+        run: |
+          rm -rf bin
+
+      - name: Editor compilation (bits=32)
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/i686-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=32 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86-release' || '' }}
+          platform: server
+          target: release_debug
+          tools: true
+
+      - name: Upload Editor (bits=32)
+        uses: ./.github/actions/upload-artifact
+        with:
+          name: ${{ matrix.cache-name }}-editor-32
+
+      - name: Clear bin
+        run: |
+          rm -rf bin
+
+      # Compiling templates
+      - name: Debug Template compilation (tools=false, bits=64, target=release_debug)
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/x86_64-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=64 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86_64-release' || '' }}
+          platform: server
+          target: release_debug
+          tools: false
+
+      - name: Release template compilation (tools=false, bits=64, target=release)
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/x86_64-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=64 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86_64-release' || '' }} debug_symbols=no
+          platform: server
+          target: release
+          tools: false
+
+      - name: Upload Templates (bits=64)
+        uses: ./.github/actions/upload-artifact
+        with:
+          name: ${{ matrix.cache-name }}-templates-64
+
+      - name: Clear bin
+        run: |
+          rm -rf bin
+
+      - name: Debug Template compilation (tools=false, bits=32, target=release_debug)
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/i686-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=32 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86-release' || '' }}
+          platform: server
+          target: release_debug
+          tools: false
+
+      - name: Release template compilation (tools=false, bits=32, target=release)
+        uses: ./.github/actions/godot-build
+        with:
+          buildroot: "${{ github.workspace }}/i686-godot-linux-gnu_sdk-buildroot/bin"
+          sconsflags: ${{ env.SCONSFLAGS }} ${{ env.MONO_SCONSFLAGS }} ${{ matrix.sconsflags }} bits=32 ${{ matrix.build-mono && 'mono_prefix=$HOME/mono-installs/desktop-linux-x86-release' || '' }} debug_symbols=no
+          platform: server
+          target: release
+          tools: false
+
+      - name: Upload Templates (bits=32)
+        uses: ./.github/actions/upload-artifact
+        with:
+          name: ${{ matrix.cache-name }}-templates-32
+
+      - name: Clear bin
+        run: |
+          rm -rf bin
