--- a/.github/actions/godot-mono/action.yml
+++ b/.github/actions/godot-mono/action.yml
@@ -32,7 +32,8 @@ runs:
       if: ${{ inputs.mono-release != '' }}
       uses: dsaltares/fetch-gh-release-asset@master
       with:
-        repo: "${{ env.INPUT_MONO_BUILD_REPO }}"
+        # Hacky fix since it wasn't to default to GodotSteam Server repo
+        repo: "godotengine/godot-mono-builds"
         version: "tags/${{ env.INPUT_MONO_BUILD_TAG }}"
         file: "${{ inputs.mono-release }}.zip"
     
