Some pretty lame hacks

--- a/.github/workflows/build-windows32-artifact.yml
+++ b/.github/workflows/build-windows32-artifact.yml
@@ -43,6 +43,10 @@ jobs:
         with:
           version: ${{ inputs.godot_tag }}
 
+      - name: Preempty Missing bin/
+        run: |
+          mkdir ./bin/
+
       # Download GodotSteam Server
       - name: Download GodotSteam Server
         uses: ./.github/actions/godotsteam-download
