--- a/.github/actions/godot-mono/action.yml
+++ b/.github/actions/godot-mono/action.yml
@@ -47,8 +47,9 @@ runs:
       if: ${{ inputs.mono-bcl != '' }}
       uses: dsaltares/fetch-gh-release-asset@master
       with:
-        repo: "${{ env.INPUT_MONO_BUILD_REPO }}"
-        version: "tags/${{ env.INPUT_MONO_BUILD_TAG }}"
+        # Hacky fix since env aren't passing through
+        repo: "godotengine/godot-mono-builds"
+        version: "tags/release-5299efd"
         file: "${{ inputs.mono-bcl }}.zip"
     
     - name: Extract mono base class library
