--- a/.github/workflows/build-linux-artifact.yml
+++ b/.github/workflows/build-linux-artifact.yml
@@ -58,9 +58,11 @@ jobs:
           ref: ${{ inputs.steamworks_sdk_tag }}
 
       - name: Move .so For Mono
+        shell: bash
         run: |
           mkdir ./bin/
           cp ./modules/godotsteam_server/sdk/redistributable_bin/linux64/libsteam_api.so ./bin/
+          ls ./bin/
 
       # Setting up the Linux toolchain for older versions
       - name: Setup Linux Toolchain (x86_64)
