--- a/.github/workflows/build-windows64-artifact.yml
+++ b/.github/workflows/build-windows64-artifact.yml
@@ -90,7 +90,7 @@ jobs:
         if: ${{ matrix.build-mono }}
         uses: ./.github/actions/godot-windows-build
         with:
-          sconsflags: mono_static=yes module_mono_enabled=yes mono_glue=no mono_prefix="./mon-bcls/desktop-win64-bcl"
+          sconsflags: mono_static=yes module_mono_enabled=yes mono_glue=no mono_bcl=$HOME/mono-bcls/desktop-bcl/net_4_x mono_prefix=$HOME/mono-installs/desktop-windows-x86_64-release
           platform: windows
           tools: true
 
@@ -103,7 +103,7 @@ jobs:
       - name: Set Mono scons flags
         if: ${{ matrix.build-mono }}
         run: |
-          echo "MONO_SCONSFLAGS=module_mono_enabled=yes mono_glue=yes copy_mono_root=yes mono_bcl=$HOME/mono-bcls/desktop-win32-bcl/net_4_x-win32 mono_static=yes" >> $GITHUB_ENV
+          echo "MONO_SCONSFLAGS=module_mono_enabled=yes mono_glue=yes copy_mono_root=yes mono_bcl=$HOME/mono-bcls/desktop-win64-bcl/net_4_x-win64 mono_static=yes" >> $GITHUB_ENV
 
       # Compiling editors
       - name: Compilation (bits=64)
